# Graph-neural-networks-and-deep-reinforcement-learning-in-job-scheduling

./: .gitignore  README.md  literature.md
models/End-to-end-DRL-for-FJSP/repo/: pyproject.toml
models/End-to-end-DRL-for-FJSP/repo/FJSP_MultiPPO/: FJSP_Env.py  Params.py  validation.py
models/End-to-end-DRL-for-FJSP/repo/FJSP_MultiPPO/models/: PPO_Actor1.py
models/End-to-end-DRL-for-FJSP/repo/FJSP_RealWorld/: FJSP_Env.py  Params.py  Showcase.ipynb  experiment_static_fjsp_end_to_end_drl_for_fjsp.csv  experiment_static_fjsp_end_to_end_drl_for_fjsp.py  experiment_static_jssp_end_to_end_drl_for_fjsp.csv  experiment_static_jssp_end_to_end_drl_for_fjsp.py  requirements.txt  ta01.txt  validation_realWorld.py
models/Wheatley/repo/: Showcase.ipynb  args.py  eval.py  eval.sh  experiment_dynamic_jssp_wheatley.csv  experiment_dynamic_jssp_wheatley.py  experiment_dynamic_jssp_wheatley_save.csv  experiment_static_jssp_wheatley.csv  experiment_static_jssp_wheatley.py  experiment_static_jssp_wheatley_save.csv  pyproject.toml  requirements.txt  train.sh
models/Wheatley/repo/jssp/: solve.py
models/Wheatley/repo/jssp/utils/: loaders.py  utils.py
models/Wheatley/repo/models/: agent_validator.py
models/Wheatley/repo/saved_models/20j20m_Ddeterministic_Tsimple_RL2D_GNNdgl_CONVgin_POOLavg_L2_HD64_H4_Cclique_QUICKSTART_RUN/: agent.pkl  optimizer.pkl  ortools_10.csv  ortools_11.csv  ortools_12.csv  ortools_13.csv  ortools_15.csv  ortools_17.csv  ortools_18.csv  ortools_2.csv  ortools_20.csv  ortools_22.csv  ortools_24.csv  ortools_26.csv  (+186 more)
models/Wheatley/repo/scripts/: run_tests.sh
(+1221 files in other folders)
