[tool.poetry]
name = "wheatley"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"
gymnasium = "^0.29.1"
ortools = "^9.7.2996"
visdom = "^0.2.4"
networkx = "^3.2.1"
plotly = "^5.18.0"
einops = "^0.7.0"
matplotlib = "^3.8.0"
opencv-python = "^4.8.1.78"
pandas = "^2.1.2"
torchinfo = "^1.8.0"
dgl = "^1.1.2.post1"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
